pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: pingpong
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
